  to have your name and email address listed here unless you explicitly
  note otherwise.  Whether your name & email is actually listed depends
  on how extensive the change.  (If it's a minor code, document change,
  or spelling correction your name will probably not be listed.)

****************************   Release 3.1 ******************************
Modules 3.1.3
xxxx not released yet xxxxxx		R.K. Owen (rk@owen.sj.ca.us)
	* Added document file INSTALL.RH7x which explains how to set up
	  an modules environment for all users through the system shell
	  files.  Is specific to Linux/RedHat 7.x, but is of general
	  applicability.
	* Added further tests for modulefile "module use dir_path"
	  (found an unload bug that will be fixed before release)
	* Environment variable contents are now quoted to preserve
	  any embedded environment variables. (Needed for versioning)
	* Added over 50 tests specific to module versioning, and testing
	  xgetenv.
	* Fixed the unsetenv on unload function, the feature added in 3.0.6-rko
	  was supposed to set the env.var. to the optional third argument.
	  This was to allow old env.var. values to be recovered by unraveling
	  a stack set in an other env.var.  Added tests for this feature.
	  This is used by the version modulefile.
	* Fixed and updated the version modulefile to allow stacked
	  versions to be removed the stack.
	* Removed an annoying spurious stderr newline.
	
Modules 3.1.2
Fri Jun  8 23:12:24 PDT 2001		R.K. Owen (rk@owen.sj.ca.us)
	* Fixed the "module use --append" feature, and fixed the tests
	  for "module use", "module use --append", and "module unuse".
	* Changed the global variable names (flags,current_module) to
	  (g_flags, g_current_module) to identify their ubiquity in the
	  module source.
Modules 3.1.1
Thu Feb  1 11:20:44 PST 2001		Robert Minsk (egbert@centropolisfx.com)
	Contributors:
		Robert Minsk		<egbert@centropolisfx.com>
	* init file for python added (Robert Minsk)