@@ -1,6 +1,6 @@
 dnl
 dnl File:        configure.in
-dnl Revision:    $Id: configure.in,v 1.4 2001/07/09 18:21:37 rkowen Exp $
+dnl Revision:    $Id: configure.in,v 1.5 2001/07/11 21:56:35 rkowen Exp $
 dnl Created:     94/06/18
 dnl Author:      Leif Hedstrom<hedstrom@inf.ethz.ch>
 dnl		 Martin S. Utesch <wstd@hl.siemens.de>
@@ -594,7 +594,7 @@ AC_OUTPUT(Makefile modules.lsm .spec doc/Makefile init/Makefile
 	ext/common/.cshrc ext/common/.login 
 	ext/common/.kshenv ext/common/.profile 
 	modulefiles/Makefile modulefiles/modules
-	modulefiles/module-info modulefiles/null
+	modulefiles/module-cvs modulefiles/module-info modulefiles/null
 	modulefiles/use.own modulefiles/dot modulefiles/version
 	testsuite/modulefiles/use/1.0 testsuite/modulefiles/use/2.0
 	testsuite/modulefiles/use/2.1 testsuite/modulefiles/use/2.2
