@@ -1,0 +1,37 @@
+#%Module1.0#####################################################################
+##
+## module-cvs modulefile
+##
+proc ModulesHelp { } {
+        global version
+
+        puts stderr "\tThis module will set up aliases and environment variables"
+        puts stderr "\tfor easy check-out of the most recent version of the"
+        puts stderr "\tenvironment modules package."
+        puts stderr "\n\tFor CVS access - do the 'login' first then the 'get'"
+        puts stderr "\twhen prompted for a password - just hit return"
+        puts stderr "\n\tmodules-login		- login into the modules CVS"
+        puts stderr "\t			  repository anonymously"
+        puts stderr "\tmodules-get 		- retrieve modules sources"
+        puts stderr "\n\tFor anonymous ftp access cd to /pub/modules once logged in"
+        puts stderr "\twhen prompted for a username/password - give it"
+        puts stderr "\tanonymous and your email address"
+        puts stderr "\n\tmodules-ftp		- ftp into the modules tar ball"
+        puts stderr "\t			  directory anonymously"
+        puts stderr "\n\tVersion $version\n"
+}
+
+# for Tcl script use only
+set     version      @VERSION@
+
+module-whatis	"get most recent module sources from CVS"
+
+set-alias modules-login "cvs -d:pserver:anonymous@cvs.modules.sourceforge.net:/cvsroot/modules login"
+
+set-alias modules-get "cvs -d:pserver:anonymous@cvs.modules.sourceforge.net:/cvsroot/modules checkout modules"
+
+set-alias modules-ftp "ftp modules.sourceforge.net"
+
+if [ module-info mode load ] {
+	ModulesHelp
+}
