@@ -23,6 +23,4 @@ prepend-path    PATH   		$modroot/bin
 prepend-path    MANPATH		$modroot/man
 
 module		use		@VERSIONPATH@
-if [ module-info mode remove ] {
-	module unuse @VERSIONPATH@
-}
+
