@@ -48,6 +48,3 @@ if [ module-info mode load ] {
 
 module use --append $ownmoddir
 
-if [ module-info mode remove ] {
-	module unuse $ownmoddir
-}
