@@ -1,4 +1,4 @@
-const char *version_string = "3.1.3a";
+const char *version_string = "3.1.3";
 const char *date_string = "2001-07-04";
 /* NEW TAG "modules-3-1-3" */
 /* OLD TAG "modules-3-1-2" */
