@@ -173,7 +173,7 @@ CPP  : gcc -E -C -dD -dI
 <tr><td>&nbsp;
 <td><a href="cmdPath.c.html#func-cmdSetPath">cmdSetPath()</a><td><a href="cmdPath.c.html#func-cmdSetPath">cmdPath.c</a>
 <tr><td>&nbsp;
-<td colspan=2>stat()
+<td colspan=2>stat(), strcmp()
 <tr><td>Called by:
 <td><a href="cmdModule.c.html#func-cmdModule">cmdModule()</a><td><a href="cmdModule.c.html#func-cmdModule">cmdModule.c</a>
 <tr><td>References Variables:
