@@ -135,7 +135,7 @@ ModuleCmd_Whatis.c apropos_cache 1 getenv strcat strcpy strrchr
 ModuleCmd_Whatis.c read_cache 1 fgets fprintf strchr strncpy strstr tolower
 ModuleCmd_Whatis.c whatis_dir 1 CallModuleProcedure InitializeModuleCommands Module_Error Tcl_CreateInterp Tcl_DStringInit Tcl_DeleteInterp cmdModuleWhatisInit cmdModuleWhatisShut delete_cache_list delete_dirlst dirlst_to_list fprintf get_dir malloc stat strcat strcpy strncpy strstr tolower
 ModuleCmd_Use.c ModuleCmd_UnUse 2 Module_Error %append_to_modulesbeginenv cmdRemovePath
-ModuleCmd_Use.c ModuleCmd_Use 2 %ModuleCmd_UnUse Module_Error %append_to_modulesbeginenv cmdSetPath stat
+ModuleCmd_Use.c ModuleCmd_Use 2 %ModuleCmd_UnUse Module_Error %append_to_modulesbeginenv cmdSetPath stat strcmp
 ModuleCmd_Use.c append_to_modulesbeginenv 1 Module_Error Tcl_GetVar2 fclose fopen fprintf
 ModuleCmd_Update.c ModuleCmd_Update 2 ModuleCmd_Load Module_Error Tcl_GetVar2 Tcl_SetVar2 fclose feof fgetc fopen getenv malloc moduleSetenv realloc strchr strcpy strlen strncmp strtok
 ModuleCmd_Switch.c ModuleCmd_Switch 2 IsLoaded Locate_ModuleFile Module_Error Read_Modulefile Update_LoadedList
