@@ -7,13 +7,17 @@
 
 ****************************   Release 3.1 ******************************
 Modules 3.1.3
-xxxx not released yet xxxxxx		R.K. Owen (rk@owen.sj.ca.us)
+Wed Jul 11 14:30:53 PDT 2001		R.K. Owen (rk@owen.sj.ca.us)
+	* Added module-cvs modulefile for easy CVS/ftp access to the
+	  modules CVS repository.
+	* Added README.perl describing Ron Isaacson's Env::Modulecmd
+	  perl module (Ron.Isaacson@morganstanley.com).
 	* Added document file INSTALL.RH7x which explains how to set up
 	  an modules environment for all users through the system shell
 	  files.  Is specific to Linux/RedHat 7.x, but is of general
 	  applicability.
 	* Added further tests for modulefile "module use dir_path"
-	  (found an unload bug that will be fixed before release)
+	* Fixed bug of unloading a modulefile with a "module use dir_path"
 	* Environment variable contents are now quoted to preserve
 	  any embedded environment variables. (Needed for versioning)
 	* Added over 50 tests specific to module versioning, and testing
